<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="image_description_home_screen_logo">Home Screen Logo</string>
    <string name="button_upcoming_elections">Upcoming Elections</string>
    <string name="button_find_my_representative">Find My Representative</string>
    <string name="button_use_my_location">Use my location</string>
    <string name="button_follow_election">Follow Election</string>
    <string name="button_unfollow_election">UnFollow Election</string>
    <string name="title_my_representatives">My Representatives</string>
    <string name="title_representative_search">Representative Search</string>
    <string name="description_representative_web_link">Representative Web Link</string>
    <string name="description_representative_twitter_link">Representative Twitter Link</string>
    <string name="description_representative_facebook_link">Representative Facebook Link</string>
    <string name="description_representative_image">Representative Image</string>

    <!-- TODO: Add necessary string values -->
    <string name="header_upcoming_elections">Upcoming Elections</string>
    <string name="header_saved_elections">Saved Elections</string>
    <string name="title_election_information">Election Information</string>
    <string name="title_voting_locations">Voting Locations</string>
    <string name="title_ballot_information">Ballot Information</string>

    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="location_permission_denied_explanation">Location permission is required to fetch your current location and list representatives</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="error_invalid_address">Could not map this to a valid address</string>
</resources>
