<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        tools:context="com.example.android.politicalpreparedness.ui_screens.MainActivity">

        <!-- TODO: Add image for home screen logo. -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description_home_screen_logo"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpcomingElections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/buttonUpcomingElections"
            android:text="@string/button_upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/buttonFindMyRepresentative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle" />

        <!-- TODO: Add Button to navigate to representatives. -->
        <Button
            android:id="@+id/buttonFindMyRepresentative"
            android:text="@string/button_find_my_representative"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>