<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.ui_screens.representative.RepresentativeViewModel" />

    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/search_title"
        app:layout_constraintStart_toStartOf="@+id/search_title">

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp"
            tools:text="Amphitheater Parkway" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp"
            tools:text="1600" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp"
            tools:text="Mountain View" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp"
            tools:text="94043" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_find_my_representative"
            app:layout_constraintTop_toBottomOf="@id/zip"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp" />

        <!-- TODO: Add Representatives RecyclerView -->

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:layout_conversion_absoluteHeight="0dp"
            motion:layout_conversion_absoluteWidth="0dp"
            motion:layout_editor_absoluteX="0dp"
            motion:layout_editor_absoluteY="0dp"
            motion:visibilityMode="ignore" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>